--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="time_table_of_task.jpg" alt="Imp Data">
+    <iframe src="resume.pdf"></iframe>
     <script src="script.js"></script>
 </body>
 </html>
