--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="time_table_of_task.jpg" alt="Imp Data">
-    <iframe src="resume.pdf"></iframe>
+    <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
+    <embed src="resume.pdf" type="application/pdf" width="100%" height="100vh">
+    
     <script src="script.js"></script>
 </body>
 </html>
