Add download link for MySQL Handbook PDF

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
     <embed src="MySQL Handbook.pdf" type="application/pdf" width="100%" height="100%">
-    
+    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF</a>
     <script src="script.js"></script>
 </body>
 </html>
