--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
-    <embed src="MySQL Handbook.pdf" type="application/pdf" width="100%" height="100%">
-    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF</a>
+    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL)</a> <br> <br>
+    <a href="END-TO-END-ANALYTICS-WITH-MICROSOFT-POWER-BI.pdf" download class="download-btn">⬇ Download PDF (POWER-BI)</a>
+    
     <script src="script.js"></script>
 </body>
 </html>
