--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
     <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL)</a> <br> <br>
-    <a href="END-TO-END-ANALYTICS-WITH-MICROSOFT-POWER-BI.pdf" download class="download-btn">⬇ Download PDF (POWER-BI)</a>
-    
+    <a href="END-TO-END-ANALYTICS-WITH-MICROSOFT-POWER-BI.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 1)</a>
+    <a href="PowerBi.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 2)</a>
+    <a href="Power-BI-for-Beginners.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 3)</a>
     <script src="script.js"></script>
 </body>
 </html>
