--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
-    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL)</a> <br> <br>
+    <br> <br>
+    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL)</a> 
+    <br> <br>
     <a href="END-TO-END-ANALYTICS-WITH-MICROSOFT-POWER-BI.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 1)</a>
+    <br> <br>
     <a href="PowerBi.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 2)</a>
+    <br> <br>
     <a href="Power-BI-for-Beginners.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 3)</a>
+    <br> <br>
     <script src="script.js"></script>
 </body>
 </html>
