--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
     <br> <br>
-    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL)</a> 
+    <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL - 1)</a> 
     <br> <br>
+    <a href="SQL (notes) (1).pdf" download class="download-btn">⬇ Download PDF (MYSQL - 2)</a>
+    <br> <br>
+    <a href="SQL Notes by Apna College (1).pdf" download class="download-btn">⬇ Download PDF (MYSQL - 3)</a>
+    <br> <br>
+
+    <!-- ------------------------------------------- Power BI ------------------------------------------- -->
     <a href="END-TO-END-ANALYTICS-WITH-MICROSOFT-POWER-BI.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 1)</a>
     <br> <br>
     <a href="PowerBi.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 2)</a>
     <br> <br>
     <a href="Power-BI-for-Beginners.pdf" download class="download-btn">⬇ Download PDF (POWER-BI - 3)</a>
     <br> <br>
+    
     <script src="script.js"></script>
 </body>
 </html>
