--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <a href="SQL (notes) (1).pdf" download class="download-btn">⬇ Download PDF (MYSQL - 2)</a>
     <br> <br>
     <a href="SQL Notes by Apna College (1).pdf" download class="download-btn">⬇ Download PDF (MYSQL - 3)</a>
+    <br> <br>
+    <a href="DBMS_Notes (2).pdf" download class="download-btn">⬇ Download PDF (DBMS)</a>
     <br> 
     <hr>
     <hr>
