--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
     <!-- <img src="time_table_of_task.jpg" alt="Imp Data"> -->
     <br> <br>
+    <a href="officialcricdeep@gmail.com.xlsx" download class="download-btn">⬇ Download PDF (Excel - 1)</a>
+    <a href="Business Analyst - Excel.xlsx" download class="download-btn">⬇ Download PDF (Excel - 2)</a>
+    <br> 
+    <hr>
+    <hr>
+    <br>
+    <!-- ------------------------------------------- MySQL ------------------------------------------- -->
     <a href="MySQL Handbook.pdf" download class="download-btn">⬇ Download PDF (MYSQL - 1)</a> 
     <br> <br>
     <a href="SQL (notes) (1).pdf" download class="download-btn">⬇ Download PDF (MYSQL - 2)</a>
